styles/styles.css
body {
    margin: 0;
    padding: 0;
    min-height: 500px;
    height: 100%;
    overflow: hidden;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
}

.background-video {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
}

/* Navigation */

.navigation-container {
    position: fixed;
    left: 10px;
    top: 50%;
    transform: translateY(-50%);
    z-index: 1000;
}

.navigation-item {
    display: block;
    margin-bottom: 20px;
    text-align: center;
    text-decoration: none;
}

.navigation-item img {
    width: 50px;
    height: auto;
    display: block;
    margin: 0 auto;
}

.nav-text {
    display: block;
    color: white;
    margin-top: 5px;
}

/* Windows */

.floating-window {
    display: none;
    position: fixed;
    top: 10%;
    left: 10%;
    width: 60%;
    height: 70%;
    background-color: white;
    padding: 20px;
    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
    z-index: 1001;
    overflow-y: auto;
}

.window-header {
    display: flex;
    justify-content: flex-start;
}

.close-btn {
    border: none;
    background: none;
    color: #333;
    font-size: 24px;
    cursor: pointer;
}

.close-btn:hover {
    color: red;
}

.draggable {
    cursor: move;
}

.resize-handle {
    position: absolute;
    bottom: 0;
    right: 0;
    width: 20px;
    height: 20px;
    background: #ccc;
    cursor: nwse-resize;
    z-index: 10;
}

/* Footer */

.taskbar {
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100%;
    background-color: #333;
    color: white;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.social-media-icons {
    display: flex;
    justify-content: center;
    align-items: center;
}

.social-media-icons img {
    margin: 0 10px;
    width: 24px;
    height: auto;
}

.time {
    font-size: 16px;
    margin: 0 10px;
}

